# cmake-sample

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
include/SAMPLE/: SAMPLE.h
src/: CMakeLists.txt  SAMPLE.c  SAMPLE_main.c
test/unit/: CMakeLists.txt  SAMPLE.cpp
